# blobber

./: AUTHORS  COPYING  ChangeLog  Doxyfile.in  Makefile  Makefile.am  README  autogen.sh  configure.ac  frame.h  framegrabber.cpp  framegrabber.h  gtktest.cpp  libblobber.pc.in  nerdtag.h  options_window.cpp  projection.cpp  projection.h  runtest.cpp  test.cpp  test.h  types.h  utils.cpp
blobber/: Makefile.am  application.cpp  application.h  blobber.cpp  blobber.h  camarea.cpp  camarea.h  camera_window.cpp  camera_window.h  colormap.cpp  colormap.h  configuration.cpp  configuration.h  exception.h  frame.cpp  frame.h  framegrabber.h  framegrabber_factory.cpp  framegrabberone.cpp  framegrabbertwo.cpp  help_window.cpp  help_window.h  mod_interface.cpp  mod_interface.h  mod_utils.cpp  mod_utils.h  mods.h  mods_interface.cpp  options_window.cpp  options_window.h  pixconverter.cpp  pixconverter.h  projection_window.cpp  projection_window.h  types.h  utils.cpp  utils.h
blobber/gtk_utils/: text_box.cpp  text_box.h
blobber/mod_utils/: movable_box.cpp  movable_box.h  movable_circle.cpp  movable_circle.h  movable_crosshairs.cpp  movable_crosshairs.h  movable_object.cpp  movable_object.h  movable_square.cpp  movable_square.h  moveable_object.h  sprite.cpp  sprite.h
blobber/mods/: Makefile.am  laser_tag.cpp  multi_colored_tag.cpp
blobber/options_window/: additional_options_tab.cpp  additional_options_tab.h  camera_options_tab.cpp  camera_options_tab.h  module_options_tab.cpp  module_options_tab.h  options_window.cpp  options_window.h  poi_options_tab.cpp  poi_options_tab.h
glblobber/: CameraWindow.cpp  CameraWindow.h  Frame.cpp  Frame.h  Makefile.am  POI.cpp  POI.h  ProjectionWindow.cpp  ProjectionWindow.h  glblobber.cpp  glblobber.h  pixconverter.cpp  pixconverter.h  utility.h
modules/: Makefile.am  README
modules/color_randomizer/: .color_randomizer.cpp.swo  .color_randomizer.cpp.swp  .color_randomizer.h.swo  .color_randomizer.h.swp  color_randomizer.cpp  color_randomizer.h
modules/duckhunt/: duckhunt.cpp  duckhunt.h
modules/flower/: flower.cpp  flower.h
modules/frame_rate/: frame_rate.cpp  frame_rate.h
modules/green_screen/: Makefile.am  green_screen.cpp  green_screen.h
modules/invaders/: invaders.cpp  invaders.h
modules/laser_tag/: Makefile.am  laser_tag.cpp  laser_tag.h
modules/libs/stk/: RtAudio.cpp
modules/movable_shapes/: movable_shapes.cpp  movable_shapes.h
modules/multi_colored_tag/: multi_colored_tag.cpp  multi_colored_tag.h
modules/multi_laser_tag/: multi_laser_tag.cpp  multi_laser_tag.h
modules/pointer/: pointer.cpp  pointer.h
modules/pong/: Makefile  README  ball.cpp  ball.h  inst  paddle.cpp  paddle.h  pong.cpp  pong.h  pongmod.h
modules/pong/semmy/: ball.h  paddle.cpp  pong.cpp  pong.h  pongmod.h
modules/projection_options/: projection_options.cpp  projection_options.h
modules/refresh_rate/: refresh_rate.cpp  refresh_rate.h
modules/shapesnsounds/: shapesnsounds.cpp  shapesnsounds.h
modules/theremin/: theremin.cpp  theremin.h
modules/theremin/stk/: FileRead.cpp  LICENSE  Stk.cpp
src/: Makefile  Makefile.am  blobber.cpp  blobber.h  camarea.cpp  camarea.h  camera_window.cpp  camera_window.h  exception.h  frame.cpp  framegrabber.cpp  framegrabber.h  framegrabber_factory.cpp  framegrabbertwo.cpp  mods.h  mods_interface.cpp  nerdtag.h  options_window.cpp  options_window.h  pixconverter.cpp  pixconverter.h  projection.cpp  projection.h  projection_window.cpp  projection_window.h  types.h  utils.cpp  utils.h
src/mods/: green_screen.cpp  laser_tag.cpp  multi_colored_tag.cpp  multi_laser_tag.cpp  projection_options.cpp
xcLaserTag/: bigDif.txt
xcLaserTag/LaserTag2002Xcode/app/LaserTag2002/data/settings/: colors.xml
xcLaserTag/LaserTag2002Xcode/app/LaserTag2002/src/: Makefile  main.cpp  output.txt  run.sh  testApp.cpp  testApp.h
xcLaserTag/LaserTag2002Xcode/app/LaserTag2002/src/app/: appController.cpp  appController.h  baseGui.h  guiSetting.cpp  guiSetting.h  guiSettingsManager.cpp  guiSettingsManager.h
xcLaserTag/LaserTag2002Xcode/app/LaserTag2002/src/dataIn/: coordWarping.cpp  coordWarping.h  hitZone.h  laserTracking.cpp  laserTracking.h
xcLaserTag/LaserTag2002Xcode/app/LaserTag2002/src/dataOut/: drips.cpp  drips.h  imageProjection.h  laserSending.cpp  laserSending.h  trackPlayer.h
xcLaserTag/LaserTag2002Xcode/app/LaserTag2002/src/utils/: colorManager.cpp  colorManager.h  glBlendFunc.h
xcLaserTag/LaserTag2002Xcode/libs/fmodex/inc/: fmod_errors.h  test.c
xcLaserTag/LaserTag2002Xcode/libs/fmodex/lib/: libfmodexp.so.4.16.04
xcLaserTag/LaserTag2002Xcode/libs/fobs/: .sconsign.dblite  ChangeLog  FOBS_GUIDE  INSTALL  README  SConstruct  SInit  buildFobs.sh
xcLaserTag/LaserTag2002Xcode/libs/fobs/.sconf_temp/: conftest_1.c  conftest_2.c  conftest_3.c  conftest_4.c  conftest_5.c  conftest_7  conftest_7.c
xcLaserTag/LaserTag2002Xcode/libs/fobs/core/: Decoder.cpp  Encoder.cpp  Error.cpp  PacketBuffer.cpp  SConstruct  Transcoder.cpp  common.h
xcLaserTag/LaserTag2002Xcode/libs/fobs/ffmpeg/: cmdutils.d  config.err  config.h  config.mak  ffmpeg.d  ffserver.d  libavcodec-uninstalled.pc  libavdevice-uninstalled.pc  libavdevice.pc  libavformat-uninstalled.pc  libavformat.pc  libswscale.pc
xcLaserTag/LaserTag2002Xcode/libs/fobs/ffmpeg/libavcodec/: 4xm.d  8bps.d  (+244 more)
xcLaserTag/LaserTag2002Xcode/libs/fobs/jmf/: SConstruct  __SConstruct  _tags.h  com_omnividea_media_codec_audio_JavaDecoder.h  com_omnividea_media_codec_video_JavaDecoder.h  com_omnividea_media_parser_video_Parser.h  decoder.cpp  decoder.os  stand_alone_codec.cpp  stand_alone_codec.cpp.orig  stand_alone_codec.os
xcLaserTag/LaserTag2002Xcode/libs/fobs/resources/: current-ffmpeg.tar.bz2
xcLaserTag/LaserTag2002Xcode/libs/fobs/scripts/: fobs.py  fobscons.py
xcLaserTag/LaserTag2002Xcode/libs/fobs/test/: SConstruct  decode.cpp  decode_loop.cpp  reencoder.cpp  transcoder.cpp
xcLaserTag/LaserTag2002Xcode/libs/openCV/lib/: laserTag  libcv.so.1.0.0  libcxcore.so.1.0.0  output.txt
xcLaserTag/LaserTag2002Xcode/libs/tcpUdpManager/: TCPManager.h  UDPManager.cpp  UDPManager.h
(+639 files in other folders)
